--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ magic-filter==1.0.12
 multidict==6.0.5
 pydantic==2.5.3
 pydantic_core==2.14.6
+PyMySQL==1.1.0
 python-dotenv==1.0.1
 typing_extensions==4.10.0
 yarl==1.9.4
