--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ frozenlist==1.4.1
 idna==3.6
 magic-filter==1.0.12
 multidict==6.0.5
+pip==24.0
 pydantic==2.5.3
 pydantic_core==2.14.6
 PyMySQL==1.1.0
